# superelixier-updater

./: .flake8  .gitignore  .pre-commit-config.yaml  Adding Apps.md  Available Apps.md  BUILDING.md  LICENSE.html  NOTICE  NOTICE.txt  README.md  autodoc.py  build.bat  build.py  configurator.py  main.py  pyproject.toml  requirements.txt  settings.py  superelixier-update.py  tox.ini
.github/ISSUE_TEMPLATE/: app-request.md  bug.md  bug_report.md  feature.md  feature_request.md
.github/workflows/: codeql-analysis.yml  python-app.yml
.run/: Autoformat.run.xml  autodoc.run.xml  build.run.xml  main.run.xml
appveyor/: __init__.py  appveyor.py  appveyor_app.py  appveyor_manager.py
config/: AVAILABLE.json  auth.default.toml  auth.json  auth_example.json  available.json  eula.toml  local_example.json  local_example.toml
config_handler/: __init__.py  config_handler.py  eula.py
config_loader/: __init__.py  config_loader.py  config_loader2.py  defaults.py  eula.py
definitions/: .manifest.json  .manifest.toml  Audacity.json  Blender.json  CDBurnerXP.json  Etcher.json  FileZilla Client.json  FreeCommander XE.json  HandBrake.json  HxD.json  Kdenlive.json  KeePassXC.json  KiTTY.json  MPC Video Renderer.toml  MicMute.toml  Notepad++.json  PCSX2.json  PPSSPP.json  ReShade Setup.json  Remove Empty Directories.json  RyuSAK.toml  Steam Rom Manager.json  Steamless.toml  Streamlink.toml  VLC media player.json  VSCode.json  VSCodium.json  WindowResizer.toml  XnView Classic.json  XnView MP.json  audacity.json  blender.json  blender.toml  cdburnerxp.json  cdburnerxp.toml  cemu.json  cemu.toml  citra-canary.json  citra-canary.toml  citra-nightly.json  (+112 more)
definitions-wip/: ppsspp-development.toml  winscp.json  winscp.toml
docs/: Adding Apps.md  Available Apps.md  github-markdown.css
environment_handler/: environment_handler.py
file_handler/: downloader.py  file_handler.py  fs_helper.py
filesystem_handler/: filesystem_handler.py
generic_app/: generic_app.py  generic_manager.py
github/: __init__.py  github.py  github_actions.py  github_app.py  github_manager.py  github_project.py
github_manager/: github_manager.py
gui/: __init__.py  callbacks.py  component.py
helper/: __init__.py  terminal.py  toml.py  types.py
html/: html_app.py  html_manager.py
html_seu/: __init__.py  html_app.py  html_manager.py
schema/: definition.py
src/superelixier/: __init__.py  __main__.py  application.py  config_handler.py  configuration.py  definition.py  environment_handler.py  eula.py  schema.py  schemas.py  self_updater.py
src/superelixier/appveyor/: appveyor_app.py  appveyor_manager.py
src/superelixier/commands/: check_configuration.py  check_definitions.py  install.py  search.py  self_upgrade.py  upgrade.py
src/superelixier/config_handler/: __init__.py  eula.py
src/superelixier/file_handler/: __init__.py  downloader.py  fs_helper.py
src/superelixier/generic/: generic_app.py  generic_manager.py
src/superelixier/github/: github_app.py  github_manager.py
superelixier/: __init__.py  __main__.py
superelixier/appveyor/: __init__.py  appveyor_app.py
superelixier/config_handler/: __init__.py
superelixier/generic/: generic_app.py  generic_manager.py
superelixier/github/: __init__.py
superelixier/helper/: filesystem.py  types.py
superelixier/html/: html_app.py
version_scheme/: version_scheme.py
(+11 files in other folders)
