[tool.poetry]
name = "superelixier"
version = "0.1.6"
description = "Superelixier is a generic, extensible updater for portable software."
license = "MPL-2.0"
authors = ["Fabian H. Schneider <example@example.com>"]
readme = "README.md"
repository = "https://github.com/FlotterCodername/superelixier-updater"
homepage = "https://github.com/FlotterCodername/superelixier-updater"
keywords = ["windows", "continous-delivery"]
packages = [{include = "superelixier", from = "src"}]

[tool.poetry.scripts]
superelixier = "superelixier.__main__:main"

[tool.poetry.dependencies]
python = ">=3.11, <3.12"
# Dependencies
cleo = "^2.0"  # https://github.com/python-poetry/cleo/blob/main/CHANGELOG.md
colorama = "^0.4"
jsonschema = "^4.18"
packaging = ">=21.3, <22"
python-dateutil = "^2.8.2"
requests = "^2.31"
tomli = "^2.0"
tomli-w = "^1.0"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "^6.0"  # https://flake8.pycqa.org/en/latest/release-notes/index.html
isort = "^5.12"
pre-commit = "^3.3"  # https://github.com/pre-commit/pre-commit/blob/main/CHANGELOG.md
pyinstaller = "^5.13"  # https://pyinstaller.org/en/stable/CHANGES.html

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
line_length = 120
profile = "black"
